--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "react-native-ble-plx": "^3.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.75.2",
     "@react-native/eslint-config": "0.75.2",
@@ -31,7 +32,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.19.0",
     "jest": "^29.7.0",
     "prettier": "2.8.8",
